fix: 친구 재 추가 시, 친구 데이터 생성하도록 수정, 친구 데이터 존재할 경우 예외처리